Servicenow - 222 - Added new actions: Create Vulnerability, Get Vulnerability, Update Vulnerability, Delete Vulnerability | Added new trigger: Vulnerability Updated

--- a/plugins/servicenow/Dockerfile
+++ b/plugins/servicenow/Dockerfile
@@ -1,4 +1,4 @@
-FROM rapid7/insightconnect-python-3-38-slim-plugin:4
+FROM rapid7/insightconnect-python-3-38-slim-plugin:5
 # Refer to the following documentation for available SDK parent images: https://docs.rapid7.com/insightconnect/sdk-guide/#sdk-guide
 
 LABEL organization=rapid7
@@ -12,10 +12,11 @@ LABEL sdk=python
 # Add source code
 WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
+ADD ./requirements.txt /python/src/requirements.txt
+RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 ADD . /python/src
 
 # Install pip dependencies
-RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 # Install plugin
 RUN python setup.py build && python setup.py install
