--- a/plugins/servicenow/plugin.spec.yaml
+++ b/plugins/servicenow/plugin.spec.yaml
@@ -658,14 +658,20 @@ actions:
         example: '[{"content":"9de5069c5afe602b2ea0a04b66beb2c0","content_type":"text/plain","file_name":"example.txt"}]'
   create_vulnerability:
     title: Create Vulnerability
-    description: Creates a new vulnerability item record
+    description: Creates a new vulnerability record
     input:
-      risk_score:
-        title: Risk Score
-        description: The risk score of the vulnerability, from 0 to 100
-        type: integer
+      risk_rating:
+        title: Risk Rating
+        description: The risk rating of the vulnerability
+        type: string
+        enum:
+          - Low
+          - Medium
+          - High
+          - Critical
+          - ""
         required: false
-        example: 30
+        example: SAFE
       state:
         title: State
         description: The state of the vulnerability
@@ -675,42 +681,12 @@ actions:
           - Under Investigation
         required: false
         example: Open
-      source:
-        title: Source
-        description: The vulnerability source
-        type: string
-        required: false
-        example: ExampleSource
-      vulnerability:
-        title: Vulnerability
-        description: The reference of the found vulnerability (third-party vulnerability entry)
-        type: string
-        required: false
-        example: 9de5069c5afe602b2ea0a04b66beb2c0
-      ip_address:
-        title: IP Address
-        description: The IP address of the source where the vulnerability was found
-        type: string
-        required: false
-        example: 192.168.0.1
-      dns:
-        title: DNS Name
-        description: The name of source DNS where the vulnerability was found
-        type: string
-        required: false
-        example: dns.example.com
       first_found:
         title: First Found
         description: The time that represents the vulnerability was first found, in ISO format
         type: date
-        required: false
+        required: true
         example: 2023-04-28T15:48:07
-      last_found:
-        title: Last Found
-        description: The time that represents when the vulnerability was last found, in ISO format
-        type: date
-        required: false
-        example: 2023-04-30T12:14:10
       assigned_to:
         title: Assigned To
         description: User ID of person assigned to the vulnerability
@@ -723,9 +699,21 @@ actions:
         type: string
         required: false
         example: Example short description
+      steps_to_reproduce:
+        title: Steps to Reproduce the Vulnerability
+        description: The described steps how to reproduce the vulnerability
+        type: string
+        required: false
+        example: <h1>Example Steps to Reproduce</h1>
+      technical_details:
+        title: Technical Details
+        description: The technical details of the vulnerability
+        type: string
+        required: false
+        example: Example technical details about the vulnerability
       additional_fields:
         title: Additional Fields
-        description: JSON object containing the additional fields and values to create the vulnerability
+        description: JSON object containing the additional fields and values to create incident
         type: object
         required: false
         example: '{"description": "Example description"}'
@@ -747,7 +735,7 @@ actions:
         description: URL to newly created vulnerability
         type: string
         required: true
-        example: "https://example.service-now.com/sn_vul_vulnerable_item.do?sys_id=61..."
+        example: "https://example.service-now.com/sn_vul_app_vulnerable_item.do?sys_id=61..."
   get_vulnerability:
     title: Get Vulnerability
     description: Retrieve the vulnerability by ID
@@ -782,52 +770,33 @@ actions:
         type: string
         required: true
         example: 9de5069c5afe602b2ea0a04b66beb2c0
-      vulnerability:
-        title: Vulnerability
-        description: The reference of the found vulnerability
+      risk_rating:
+        title: Risk Rating
+        description: The risk rating of the vulnerability
         type: string
+        enum:
+          - Low
+          - Medium
+          - High
+          - Critical
+          - ""
         required: false
-        example: 9de5069c5afe602b2ea0a04b66beb2c0
+        example: SAFE
       state:
         title: State
         description: The state of the vulnerability
         type: string
         enum:
-          - ""
           - Open
           - Under Investigation
         required: false
         example: Open
-      source:
-        title: Source
-        description: The vulnerability source
-        type: string
-        required: false
-        example: ExampleSource
-      ip_address:
-        title: IP Address
-        description: The IP address of the source where the vulnerability was found
-        type: string
-        required: false
-        example: 192.168.0.1
-      dns:
-        title: DNS Name
-        description: The name of the source DNS where the vulnerability was found
-        type: string
-        required: false
-        example: dns.example.com
       first_found:
         title: First Found
         description: The time that represents the vulnerability was first found, in ISO format
         type: date
         required: false
         example: 2023-04-28T15:48:07
-      last_found:
-        title: Last Found
-        description: The time that represents when the vulnerability was last found, in ISO format
-        type: date
-        required: false
-        example: 2023-04-30T12:14:10
       assigned_to:
         title: Assigned To
         description: User ID of person assigned to the vulnerability
@@ -840,9 +809,21 @@ actions:
         type: string
         required: false
         example: Example short description
+      steps_to_reproduce:
+        title: Steps to Reproduce the Vulnerability
+        description: The described steps how to reproduce the vulnerability
+        type: string
+        required: false
+        example: <h1>Example Steps to Reproduce</h1>
+      technical_details:
+        title: Technical Details
+        description: The technical details of the vulnerability
+        type: string
+        required: false
+        example: Example technical details about the vulnerability
       additional_fields:
         title: Additional Fields
-        description: JSON object containing the additional fields and values to update the vulnerability item
+        description: JSON object containing the additional fields and values to create incident
         type: object
         required: false
         example: '{"description": "Example description"}'
@@ -929,12 +910,12 @@ triggers:
     title: Vulnerability Updated
     description: Identifies if a vulnerability has been updated
     input:
-      system_ids:
-        title: System IDs
-        description: List of system IDs of the vulnerability record to monitor
-        type: "[]string"
+      system_id:
+        title: System ID
+        description: System ID of the vulnerability record to monitor
+        type: string
         required: true
-        example: '["9de5069c5afe602b2ea0a04b66beb2c0"]'
+        example: 9de5069c5afe602b2ea0a04b66beb2c0
       monitored_fields:
         title: Monitored Fields
         description: Comma-separated list of fields to be monitored (e.g. resolved,resolved_by)
@@ -949,9 +930,9 @@ triggers:
         default: 5
         example: 5
     output:
-      updated_vulnerabilities:
+      changed_fields:
         title: Changed Fields
-        description: List of JSON objects containing the system ID of the updated vulnerability and representation of the changed fields (map of field name from previous to current values)
-        type: "[]updated_vulnerability"
+        description: JSON object representing changed fields (map of field name to previous and current values)
+        type: object
         required: true
-        example: '{"updated_vulnerabilities": [{"system_id": "9de5069c5afe602b2ea0a04b66beb2c0", "changed_fields": {"description":{"previous":"Description 1","current":"Description 2"}}}]}'
+        example: '{"description":{"previous":"Description 1","current":"Description 2"}}'
