--- a/plugins/checkpoint_sand_blast/plugin.spec.yaml
+++ b/plugins/checkpoint_sand_blast/plugin.spec.yaml
@@ -5,7 +5,7 @@ name: checkpoint_sand_blast
 title: Check Point SandBlast
 description: The Check Point SandBlast plugin extends the SandBlast service and enables report status and suspicious file upload
 version: 1.0.3
-supported_versions: CheckPoint 2023-05-15
+supported_versions: ["CheckPoint 2023-05-15"]
 vendor: rapid7
 support: community
 status: []
